fix overflow
Update post-content.css

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,6 +29,7 @@
   flex-direction: column;
   min-height: 100vh;
   background-color: var(--clr-bg-2);
+  overflow: hidden;
 }
 
 .content-wrap {
